# panoptic

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.cursor/rules/: python.mdc
.github/workflows/: ci.yaml  template-update.yaml
panoptic/: __init__.py  cache.py  extraction.py  main.py  models.py  parse.py  prompts.py  resolution.py  settings.py  utils.py  wikidata.py
panoptic/prompts/: __init__.py  disambiguation.py  resolution.py
scripts/: app.toml
tests/: test_cache.py  test_prompts.py
